[package]
name = "materials"
version = "0.4.0"
edition = "2021"
authors = ["AlexeyPe<alexey_pe@ro.ru>"]
description = "Data on rocks, elements, metals, etc."
keywords = ["data"]
license = "MIT"
repository = "https://github.com/AlexeyPe/materials"
documentation = "https://docs.rs/materials"

[dependencies]
